half clean-up -- fix avi to mp4 so sound works on safari

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,35 @@
-body {
+body, html {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding:5px;
+  text-align:center;
+  background-color:#f6f6f6;
 }
 
 a {
   color: #00B7FF;
+}
+.container { position:relative; }
+.container video {
+    position:relative;
+    z-index:0;
+}
+.overlay {
+    position:absolute;
+    margin-left: auto;
+	margin-right: auto;
+    top:0;
+    left:0;
+    right:0;
+    z-index:1;
+}
+.explain {
+	line-height:40px;
+}
+.title {
+    font-size: 1.67em;
+    font-weight: bold;
+}
+footer {
+	text-align:right;
+	margin: 10px 10px 30px 10px;
 }
